Fix problems in personalizer

--- a/generator/asset/maven/personalizer/src/main/webapp/views/client.html
+++ b/generator/asset/maven/personalizer/src/main/webapp/views/client.html
@@ -6,7 +6,7 @@
 
         <p><h3> Les requêtes disponibles </h3></p>
         <ul ng-repeat="element in zones">
-            <li><h3><a href="#/client/{{element.service}}/{{element.zone}}">{{element.zone}}</a></h3></li>
+            <li><h3><a href="#/client/{{element.service}}/{{element.zone}}"><span tooltip-animation="true" tooltip="Zone :{{element.zone}}" tooltip-placement="bottom">{{element.zone}}</span></a></h3></li>
         </ul>
     </div>
 </div>
