--- a/generator/asset/maven/personalizer/src/main/webapp/views/zone.html
+++ b/generator/asset/maven/personalizer/src/main/webapp/views/zone.html
@@ -26,7 +26,8 @@
             <th>{{call.callID}}</th>
             <th> Action</th>
         </tr>
-        <tr ng-repeat="params in call.parameters">
+        <tr ng-repeat="params in call.parameters">   <!--<tr ng-repeat="params in parameters[call.callID].params">
+            <td>{{params.humanName}} = {{getValueByID(call.callID, param.id)}}</td> -->
             <td>{{params}}</td>
             <td><button class="btn btn-small" ng-click="removeCall(call.callID, params.id)"> <i class="icon-trash"></i>Supprimer</button> <button class="btn btn-small" ng-click="editCall(params.id, call.callID)"><i class="icon-pencil"></i> Modifier</button></td>
         </tr>
