--- a/generator/asset/element/zone/mainZone_ca/style.less
+++ b/generator/asset/element/zone/mainZone_ca/style.less
@@ -7,7 +7,7 @@
  */
 
 // Zone principale
-#mainzone {
+#${zoneName} {
 
   // Position
   position: absolute;
@@ -34,7 +34,7 @@
   -o-transition-duration: 1s;
   transition-duration: 1s;
 
-  #mainzone_content {
+  #${zoneName}_content {
     position: absolute;
     top: 40%;
     width: 90%;
@@ -43,7 +43,7 @@
     font-size: 0.90em;
   }
 
-  #mainzone_logo {
+  #${zoneName}_logo {
     position: absolute;
     top: 3%;
     left: 2%;
@@ -56,7 +56,7 @@
   }
 
   // Titre du render
-  #mainzone_title {
+  #${zoneName}_title {
     position: absolute;
     width: 100%;
     top: 30%;
