Change in zone style and comportement alerte

--- a/generator/asset/element/zone/rightZone_choralies/style.less
+++ b/generator/asset/element/zone/rightZone_choralies/style.less
@@ -37,6 +37,14 @@
 	}
 }   
 
+#${zoneName} {
+  height: 80%;
+  top: 20%;
+  position: absolute;
+  width: 100%;
+  overflow: hidden;
+}
+
 #${zoneName} .title{
 	display:none;
 }
