--- a/generator/asset/maven/personalizer/src/main/webapp/views/add.html
+++ b/generator/asset/maven/personalizer/src/main/webapp/views/add.html
@@ -7,35 +7,35 @@
 
     <div>
         <form class="form-horizontal">
-            <div class="control-group" ng-repeat="param in parameters.params">           <!-- href="" data-toggle="popover" title="" data-content="And here's some amazing content. It's very engaging. right?" data-original-title="A Title" -->
+            <div class="control-group" ng-repeat="param in newCallParameters.params">           <!-- href="" data-toggle="popover" title="" data-content="And here's some amazing content. It's very engaging. right?" data-original-title="A Title" -->
                 <label class="control-label"><h4>{{param.humanName}} <span tooltip-animation="true" tooltip="{{param.help}}" tooltip-placement="bottom"><a><i class="icon-question-sign"></i></a></span></h4></label>
                 <div class="controls" ng-switch="param.type">
                     <span ng-switch-when="STRING">
-                    <input type="text" placeholder="Saisissez la valeur" ng-model="values[param.id]">
+                    <input type="text" placeholder="Saisissez la valeur" ng-model="newCallvalues[param.id]">
                     </span>
                     <!--<input  ng-switch-when="int" type="text" ng-model="humanNameValue" placeholder="Nom de l'appel"> -->
                     <span ng-switch-when="INT" ng-switch="param.typeCST">
-                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="values[param.id]">
-                        <input ng-switch-when="NUMBER" type="number" min="0" step="1" ng-model="values[param.id]">
-                        <input ng-switch-when="NONE" type="number" min="0" step="1" ng-model="values[param.id]">
+                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
+                        <input ng-switch-when="NUMBER" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
+                        <input ng-switch-when="NONE" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
                     </span>
                      <span ng-switch-when="LONG" ng-switch="param.typeCST">
-                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="values[param.id]">
-                        <input ng-switch-when="NUMBER" type="number" step="1" ng-model="values[param.id]">
-                         <input ng-switch-when="NONE" type="number" step="0.50" ng-model="values[param.id]">
+                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
+                        <input ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallvalues[param.id]">
+                         <input ng-switch-when="NONE" type="number" step="0.50" ng-model="newCallvalues[param.id]">
                     </span>
                     <span ng-switch-when="DOUBLE" ng-switch="param.typeCST">
-                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="values[param.id]">
-                        <input ng-switch-when="NUMBER" type="number" step="1" ng-model="values[param.id]">
-                         <input ng-switch-when="NONE" type="number" step="0.1" ng-model="values[param.id]">
+                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
+                        <input ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallvalues[param.id]">
+                         <input ng-switch-when="NONE" type="number" step="0.1" ng-model="newCallvalues[param.id]">
                     </span>
-                    <select ng-switch-when="list" ng-model="myOption" ng-options="element for element in param.values" ng-checked="setOption(param.id,myOption)"></select>
+                    <select ng-switch-when="list" ng-model="myOption" ng-options="element for element in param.values" ng-checked="setOptionInNewCall(param.id, myOption)"></select>
                     <!--<a id="help-{{param.id}}" rel="popover"><i class="icon-question-sign icon-2x"></i></a>
                     <a rel="tooltip" tooltip="param.help"><i class="icon-question-sign"></i></a> -->
                 </div>
             </div>
         </form>
-        <button class="btn btn-success" type="submit" ng-click="validate()"> <i class="icon-save"></i> Valider </button>
+        <button class="btn btn-success" type="submit" ng-click="validateAddNewCall()"> <i class="icon-save"></i> Valider </button>
         <button class="btn btn-inverse" ng-click="cancel()"> <i class="icon-eraser"></i> Annuler </button>
     </div>
 </div>
