--- a/generator/asset/maven/personalizer/src/main/webapp/views/add.html
+++ b/generator/asset/maven/personalizer/src/main/webapp/views/add.html
@@ -11,23 +11,23 @@
                 <label class="control-label"><h4>{{param.humanName}} <span tooltip-animation="true" tooltip="{{param.help}}" tooltip-placement="bottom"><a><i class="icon-question-sign"></i></a></span></h4></label>
                 <div class="controls" ng-switch="param.type">
                     <span ng-switch-when="STRING">
-                    <input type="text" placeholder="Saisissez la valeur" ng-model="newCallvalues[param.id]">
+                    <input type="text" placeholder="Saisissez la valeur" ng-model="[param.id]">
                     </span>
                     <!--<input  ng-switch-when="int" type="text" ng-model="humanNameValue" placeholder="Nom de l'appel"> -->
                     <span ng-switch-when="INT" ng-switch="param.typeCST">
-                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
-                        <input ng-switch-when="NUMBER" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
-                        <input ng-switch-when="NONE" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
+                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[param.id]">
+                        <input ng-switch-when="NUMBER" type="number" min="0" step="1" ng-model="newCallValues[param.id]">
+                        <input ng-switch-when="NONE" type="number" min="0" step="1" ng-model="newCallValues[param.id]">
                     </span>
                      <span ng-switch-when="LONG" ng-switch="param.typeCST">
-                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
-                        <input ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallvalues[param.id]">
-                         <input ng-switch-when="NONE" type="number" step="0.50" ng-model="newCallvalues[param.id]">
+                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[param.id]">
+                        <input ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallValues[param.id]">
+                         <input ng-switch-when="NONE" type="number" step="0.50" ng-model="newCallValues[param.id]">
                     </span>
                     <span ng-switch-when="DOUBLE" ng-switch="param.typeCST">
-                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
-                        <input ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallvalues[param.id]">
-                         <input ng-switch-when="NONE" type="number" step="0.1" ng-model="newCallvalues[param.id]">
+                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[param.id]">
+                        <input ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallValues[param.id]">
+                         <input ng-switch-when="NONE" type="number" step="0.1" ng-model="newCallValues[param.id]">
                     </span>
                     <select ng-switch-when="list" ng-model="myOption" ng-options="element for element in param.values" ng-checked="setOption(param.id, myOption)"></select>
                     <!--<a id="help-{{param.id}}" rel="popover"><i class="icon-question-sign icon-2x"></i></a>
