--- a/generator/asset/maven/personalizer/src/main/webapp/views/zone.html
+++ b/generator/asset/maven/personalizer/src/main/webapp/views/zone.html
@@ -71,23 +71,23 @@
                                 <label class="control-label"><h4>{{param.humanName}} <span tooltip-animation="true" tooltip="{{param.help}}" tooltip-placement="bottom"><a><i class="icon-question-sign"></i></a></span></h4></label>
                                 <div class="controls" ng-switch="param.type">
                     <span ng-switch-when="STRING">
-                    <input type="text" placeholder="Saisissez la valeur" ng-model="newCallvalues[param.id]">
+                    <input type="text" placeholder="Saisissez la valeur" ng-model="newCallValues[param.id]">
                     </span>
                                     <!--<input  ng-switch-when="int" type="text" ng-model="humanNameValue" placeholder="Nom de l'appel"> -->
                     <span ng-switch-when="INT" ng-switch="param.typeCST">
-                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
-                        <input ng-switch-when="NUMBER" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
-                        <input ng-switch-when="NONE" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
+                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[param.id]">
+                        <input ng-switch-when="NUMBER" type="number" min="0" step="1" ng-model="newCallValues[param.id]">
+                        <input ng-switch-when="NONE" type="number" min="0" step="1" ng-model="newCallValues[param.id]">
                     </span>
                      <span ng-switch-when="LONG" ng-switch="param.typeCST">
-                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
-                        <input ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallvalues[param.id]">
-                         <input ng-switch-when="NONE" type="number" step="0.50" ng-model="newCallvalues[param.id]">
+                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[param.id]">
+                        <input ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallValues[param.id]">
+                         <input ng-switch-when="NONE" type="number" step="0.50" ng-model="newCallValues[param.id]">
                     </span>
                     <span ng-switch-when="DOUBLE" ng-switch="param.typeCST">
-                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
-                        <input ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallvalues[param.id]">
-                         <input ng-switch-when="NONE" type="number" step="0.1" ng-model="newCallvalues[param.id]">
+                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[param.id]">
+                        <input ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallValues[param.id]">
+                         <input ng-switch-when="NONE" type="number" step="0.1" ng-model="newCallValues[param.id]">
                     </span>
                                     <select ng-switch-when="list" ng-model="myOption" ng-options="element for element in param.values" ng-checked="setOptionInNewCall(param.id, myOption)"></select>
                                     <!--<a id="help-{{param.id}}" rel="popover"><i class="icon-question-sign icon-2x"></i></a>
@@ -109,47 +109,46 @@
 
 
     <!-- Modal opened to edit Call -->
-    <div>
         <div modal="editCallModal" options="options">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="cancelEditCall()">×</button>
-                <h4>Modification d'un appel dans {{zone}} </h4>
+                <h4 style="text-align: center">Modification d'un appel dans {{zone}} </h4>
             </div>
+
             <div class="modal-body">
 
                 <!-- start form -->
                 <div>
-                    <h4> identifiant des appels  {{mySelectedCallID}}</h4>
+                    <h4 style="text-align: center"> identifiant des appels  {{mySelectedCallID}}</h4>
 
                     <div>
                         <form class="form-horizontal">
-                            <div class="control-group" ng-repeat="param in newCallParameters.params">
-                            <label class="control-label"><h4>{{param.humanName}} <span tooltip-animation="true" tooltip="{{param.help}}" tooltip-placement="bottom"><a><i class="icon-question-sign"></i></a></span></h4></label>
-                             <div class="controls" ng-switch="param.type">
-                    <span ng-switch-when="STRING">
-                    <input type="text" placeholder="Saisissez la valeur" ng-model="newCallvalues[param.id]">
-                    </span>
-                                    <!--<input  ng-switch-when="int" type="text" ng-model="humanNameValue" placeholder="Nom de l'appel"> -->
-                    <span ng-switch-when="INT" ng-switch="param.typeCST">
-                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
-                        <input ng-switch-when="NUMBER" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
-                        <input ng-switch-when="NONE" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
-                    </span>
-                     <span ng-switch-when="LONG" ng-switch="param.typeCST">
-                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
-                        <input ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallvalues[param.id]">
-                         <input ng-switch-when="NONE" type="number" step="0.50" ng-model="newCallvalues[param.id]">
-                    </span>
-                    <span ng-switch-when="DOUBLE" ng-switch="param.typeCST">
-                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallvalues[param.id]">
-                        <input ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallvalues[param.id]">
-                         <input ng-switch-when="NONE" type="number" step="0.1" ng-model="newCallvalues[param.id]">
-                    </span>
-                                    <select ng-switch-when="list" ng-model="myOption" ng-options="element for element in param.values" ng-checked="setOptionInNewCall(param.id, myOption)"></select>
-                                    <!--<a id="help-{{param.id}}" rel="popover"><i class="icon-question-sign icon-2x"></i></a>
-                                    <a rel="tooltip" tooltip="param.help"><i class="icon-question-sign"></i></a> -->
-                                </div>
-                            </div>
+                            <div class="control-group" ng-repeat="params in newCallParameters.params">
+                            <label class="control-label"><h4>{{params.humanName}} <span tooltip-animation="true" tooltip="{{params.help}}" tooltip-placement="bottom"><a><i class="icon-question-sign"></i></a></span></h4></label>
+                             <div class="controls" ng-switch="params.type">
+                                <span ng-switch-when="STRING">
+                                    <input type="text" placeholder="Saisissez la valeur" ng-model="newCallValues[params.id]">
+                                </span>
+
+                                <span ng-switch-when="INT" ng-switch="params.typeCST">
+                                    <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[params.id]">
+                                     <input ng-switch-when="NUMBER" type="number" min="0" step="1" ng-model="newCallValues[params.id]">
+                                     <input ng-switch-when="NONE" type="number" min="0" step="1" ng-model="newCallValues[params.id]">
+                                </span>
+                                <span ng-switch-when="LONG" ng-switch="params.typeCST">
+                                    <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[params.id]">
+                                    <input ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallValues[params.id]">
+                                    <input ng-switch-when="NONE" type="number" step="0.50" ng-model="newCallValues[params.id]">
+                                </span>
+                                <span ng-switch-when="DOUBLE" ng-switch="params.typeCST">
+                                    <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[params.id]">
+                                    <input ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallValues[params.id]">
+                                    <input ng-switch-when="NONE" type="number" step="0.1" ng-model="newCallValues[params.id]">
+                                </span>
+                                <select ng-switch-when="list" ng-model="myOption" ng-options="elemnt for elemnt in params.values" ng-checked="setOptionInNewCall(params.id, myOption)"></select>
+
+                             </div>
+                          </div>
                         </form>
                     </div>
                 </div>
@@ -161,7 +160,6 @@
                 <button class="btn btn-inverse" ng-click="cancelEditCall()"> <i class="icon-eraser"></i> Annuler </button>
             </div>
         </div>
-    </div>
 <!-- Modal opened to add new Call -->
 <!--<div modal="newModal" options="options">
     <div class="modal-header">
