--- a/generator/asset/maven/personalizer/src/main/webapp/views/zone.html
+++ b/generator/asset/maven/personalizer/src/main/webapp/views/zone.html
@@ -66,7 +66,7 @@
                     <h3 style="text-align: center">Ajout d'un nouveau appel </h3>
 
                     <div>
-                        <form class="form-horizontal">
+                        <form class="form-horizontal" ng-submit="validateAddNewCall({});">
                             <div class="control-group" ng-repeat="param in newCallParameters.params">           <!-- href="" data-toggle="popover" title="" data-content="And here's some amazing content. It's very engaging. right?" data-original-title="A Title" -->
                                 <label class="control-label"><h4>{{param.humanName}} <span tooltip-animation="true" tooltip="{{param.help}}" tooltip-placement="bottom"><a><i class="icon-question-sign"></i></a></span></h4></label>
                                 <div class="controls" ng-switch="param.type">
@@ -122,7 +122,7 @@
                     <h4 style="text-align: center"> identifiant des appels  {{mySelectedCallID}}</h4>
 
                     <div>
-                        <form class="form-horizontal">
+                        <form class="form-horizontal" ng-submit="validateEditCall({});">
                             <div class="control-group" ng-repeat="params in newCallParameters.params">
                             <label class="control-label"><h4>{{params.humanName}} <span tooltip-animation="true" tooltip="{{params.help}}" tooltip-placement="bottom"><a><i class="icon-question-sign"></i></a></span></h4></label>
                              <div class="controls" ng-switch="params.type">
