Changes in personalizer. Fix some bugs with styles.

--- a/generator/asset/maven/personalizer/src/main/webapp/views/zone.html
+++ b/generator/asset/maven/personalizer/src/main/webapp/views/zone.html
@@ -66,34 +66,39 @@
                     <h3 style="text-align: center">Ajout d'un nouveau appel </h3>
 
                     <div>
-                        <form class="form-horizontal" ng-submit="validateAddNewCall({});">
+                        <form name="formAdd" class="form-horizontal" ng-submit="validateAddNewCall({});">
                             <div class="control-group" ng-repeat="param in newCallParameters.params">           <!-- href="" data-toggle="popover" title="" data-content="And here's some amazing content. It's very engaging. right?" data-original-title="A Title" -->
                                 <label class="control-label"><h4>{{param.humanName}} <span tooltip-animation="true" tooltip="{{param.help}}" tooltip-placement="bottom"><a><i class="icon-question-sign"></i></a></span></h4></label>
                                 <div class="controls" ng-switch="param.type">
                     <span ng-switch-when="STRING">
-                    <input type="text" placeholder="Saisissez la valeur" ng-model="newCallValues[param.id]">
+                    <input name="hello_" type="text" placeholder="Saisissez la valeur" ng-model="newCallValues[param.id]" required="">
+                        <span class="error" ng-show="formAdd.hello_.$error.required"> Requis !</span>
                     </span>
                                     <!--<input  ng-switch-when="int" type="text" ng-model="humanNameValue" placeholder="Nom de l'appel"> -->
                     <span ng-switch-when="INT" ng-switch="param.typeCST">
-                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[param.id]">
-                        <input ng-switch-when="NUMBER" type="number" min="0" step="1" ng-model="newCallValues[param.id]">
-                        <input ng-switch-when="NONE" type="number" min="0" step="1" ng-model="newCallValues[param.id]">
+                        <input name="paramInt" ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" value="{{newCallValues[param.id]}}" ng-model="newCallValues[param.id]" required="">
+                        <input name="paramInt" ng-switch-when="NUMBER" type="number" min="0" step="1" value="{{newCallValues[param.id]}}" ng-model="newCallValues[param.id]" required="">
+                        <input name="paramInt" ng-switch-when="NONE" type="number" min="0" step="1" value="{{newCallValues[param.id]}}" ng-model="newCallValues[param.id]" required="">
+                          <span class="error" ng-show="formAdd.paramInt.$error.required"> Requis !</span>
                     </span>
                      <span ng-switch-when="LONG" ng-switch="param.typeCST">
-                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[param.id]">
-                        <input ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallValues[param.id]">
-                         <input ng-switch-when="NONE" type="number" step="0.50" ng-model="newCallValues[param.id]">
-                    </span>
+                        <input name="paramLong" ng-switch-when="POSITIVE_NUMBER" type="number" value="{{newCallValues[param.id]}}" min="0" step="1" ng-model="newCallValues[param.id]" required="">
+                        <input name="paramLong" ng-switch-when="NUMBER" type="number" step="1" value="{{newCallValues[param.id]}}" ng-model="newCallValues[param.id]" required="">
+                         <input name="paramLong" ng-switch-when="NONE" type="number" step="0.50" value="{{newCallValues[param.id]}}" ng-model="newCallValues[param.id]" required="">
+                         <span class="error" ng-show="formAdd.paramLong.$error.required"> Requis !</span>
+                     </span>
                     <span ng-switch-when="DOUBLE" ng-switch="param.typeCST">
-                        <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[param.id]">
-                        <input ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallValues[param.id]">
-                         <input ng-switch-when="NONE" type="number" step="0.1" ng-model="newCallValues[param.id]">
+                        <input name="paramDouble" ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" value="{{newCallValues[param.id]}}" ng-model="newCallValues[param.id]" required="">
+                        <input name="paramDouble" ng-switch-when="NUMBER" type="number" step="1" value="{{newCallValues[param.id]}}" ng-model="newCallValues[param.id]" required="">
+                         <input name="paramDouble" ng-switch-when="NONE" type="number" step="0.1" value="{{newCallValues[param.id]}}" ng-model="newCallValues[param.id]" required="">
+                        <span class="error" ng-show="formAdd.paramDouble.$error.required"> Requis !</span>
                     </span>
-                                    <select ng-switch-when="list" ng-model="myOption" ng-options="element for element in param.values" ng-checked="setOptionInNewCall(param.id, myOption)"></select>
+                                    <select name="{{param.nameInDB}}" ng-switch-when="list" ng-model="myOption" ng-options="element for element in param.values" ng-checked="setOptionInNewCall(param.id, myOption)"></select>
                                     <!--<a id="help-{{param.id}}" rel="popover"><i class="icon-question-sign icon-2x"></i></a>
                                     <a rel="tooltip" tooltip="param.help"><i class="icon-question-sign"></i></a> -->
                                 </div>
                             </div>
+
                         </form>
                     </div>
                 </div>
@@ -127,7 +132,7 @@
                             <label class="control-label"><h4>{{params.humanName}} <span tooltip-animation="true" tooltip="{{params.help}}" tooltip-placement="bottom"><a><i class="icon-question-sign"></i></a></span></h4></label>
                              <div class="controls" ng-switch="params.type">
                                 <span ng-switch-when="STRING">
-                                    <input type="text" placeholder="Saisissez la valeur" ng-model="newCallValues[params.id]">
+                                    <input type="text" size="80" placeholder="Saisissez la valeur" ng-model="newCallValues[params.id]" required="">
                                 </span>
 
                                 <span ng-switch-when="INT" ng-switch="params.typeCST">
@@ -157,6 +162,7 @@
             </div>
             <div class="modal-footer">
                 <button class="btn btn-success" type="submit" ng-click="validateEditCall()"> <i class="icon-save"></i> Valider </button>
+                <span class="error" ng-show="newCallValues.$error.required"> Requis !</span>
                 <button class="btn btn-inverse" ng-click="cancelEditCall()"> <i class="icon-eraser"></i> Annuler </button>
             </div>
         </div>
