--- a/generator/asset/element/zone/alertZone_choralies/style.less
+++ b/generator/asset/element/zone/alertZone_choralies/style.less
@@ -9,7 +9,7 @@
     -moz-transition: all .5s ease-in;
     transition: all .5s ease-in;
     position:absolute;
-    bottom:10%;
+    bottom:0%;
     left:0;
     width:100%;
     background-color:@red;
@@ -18,6 +18,7 @@
     font-size:120%;
     line-height:200%;
     z-index:200;
+    visibility: hidden;
     /*text-align:center;*/
 }
 
