Changes in renderers

--- a/generator/asset/element/renderer/choralies_render_Alerts_for_scrolling.js/less/choralies_render_Alerts_for_scrolling.less
+++ b/generator/asset/element/renderer/choralies_render_Alerts_for_scrolling.js/less/choralies_render_Alerts_for_scrolling.less
@@ -1,6 +1,6 @@
 @import "style";
 
-#alertZone .scrollContentEachLogoLeft .scrollContent{
+.scrollContentEachLogoLeft .scrollContent{
 
 	/* SMS */
 
