--- a/generator/asset/maven/personalizer/src/main/webapp/views/zone.html
+++ b/generator/asset/maven/personalizer/src/main/webapp/views/zone.html
@@ -24,13 +24,13 @@
         </caption>
         <tr>
             <th>Call identifiant</th>
-            <th ng-repeat="name in getParamHumanNameByCallID(call.callID)">{{name}}</th>
+            <th ng-repeat="name in getParamHumanNameByCallID(call.callID) | orderBy: 'id'">{{name.humanName}}</th>
             <th>Action</th>
         </tr>
 
             <tr ng-repeat="parameter in call.parameters | orderBy: 'id'">
             <td>{{parameter.id}}</td>
-            <td ng-repeat="(key, value) in parametersValuesByCall[parameter.id]"> {{value}}</td>
+            <td ng-repeat="(key, value) in parametersValuesByCall[parameter.id] "> {{value}}</td>
             <td><button class="btn btn-small" ng-click="removeCall(call.callID, parameter.id)"> <i class="icon-trash"></i>Supprimer</button> <button class="btn btn-small" ng-click="openEditCallModal(call.callID, parameter.id)"><i class="icon-pencil"></i> Modifier</button></td>
 
             <!--
@@ -76,21 +76,21 @@
                     </span>
                                     <!--<input  ng-switch-when="int" type="text" ng-model="humanNameValue" placeholder="Nom de l'appel"> -->
                     <span ng-switch-when="INT" ng-switch="param.typeCST">
-                        <input name="paramInt" ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" value="{{newCallValues[param.id]}}" ng-model="newCallValues[param.id]" required="">
-                        <input name="paramInt" ng-switch-when="NUMBER" type="number" min="0" step="1" value="{{newCallValues[param.id]}}" ng-model="newCallValues[param.id]" required="">
-                        <input name="paramInt" ng-switch-when="NONE" type="number" min="0" step="1" value="{{newCallValues[param.id]}}" ng-model="newCallValues[param.id]" required="">
+                        <input name="paramInt" ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[param.id]" required="">
+                        <input name="paramInt" ng-switch-when="NUMBER" type="number" min="0" step="1" ng-model="newCallValues[param.id]" required="">
+                        <input name="paramInt" ng-switch-when="NONE" type="number" min="0" step="1" ng-model="newCallValues[param.id]" required="">
                           <span class="error" ng-show="formAdd.paramInt.$error.required"> Requis !</span>
                     </span>
                      <span ng-switch-when="LONG" ng-switch="param.typeCST">
-                        <input name="paramLong" ng-switch-when="POSITIVE_NUMBER" type="number" value="{{newCallValues[param.id]}}" min="0" step="1" ng-model="newCallValues[param.id]" required="">
-                        <input name="paramLong" ng-switch-when="NUMBER" type="number" step="1" value="{{newCallValues[param.id]}}" ng-model="newCallValues[param.id]" required="">
-                         <input name="paramLong" ng-switch-when="NONE" type="number" step="0.50" value="{{newCallValues[param.id]}}" ng-model="newCallValues[param.id]" required="">
+                        <input name="paramLong" ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[param.id]" required="">
+                        <input name="paramLong" ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallValues[param.id]" required="">
+                         <input name="paramLong" ng-switch-when="NONE" type="number" step="0.50" ng-model="newCallValues[param.id]" required="">
                          <span class="error" ng-show="formAdd.paramLong.$error.required"> Requis !</span>
                      </span>
                     <span ng-switch-when="DOUBLE" ng-switch="param.typeCST">
-                        <input name="paramDouble" ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" value="{{newCallValues[param.id]}}" ng-model="newCallValues[param.id]" required="">
-                        <input name="paramDouble" ng-switch-when="NUMBER" type="number" step="1" value="{{newCallValues[param.id]}}" ng-model="newCallValues[param.id]" required="">
-                         <input name="paramDouble" ng-switch-when="NONE" type="number" step="0.1" value="{{newCallValues[param.id]}}" ng-model="newCallValues[param.id]" required="">
+                        <input name="paramDouble" ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[param.id]" required="">
+                        <input name="paramDouble" ng-switch-when="NUMBER" type="number" step="1" ng-model="newCallValues[param.id]" required="">
+                         <input name="paramDouble" ng-switch-when="NONE" type="number" step="0.1" ng-model="newCallValues[param.id]" required="">
                         <span class="error" ng-show="formAdd.paramDouble.$error.required"> Requis !</span>
                     </span>
                                     <select name="{{param.nameInDB}}" ng-switch-when="list" ng-model="myOption" ng-options="element for element in param.values" ng-checked="setOptionInNewCall(param.id, myOption)"></select>
@@ -136,9 +136,9 @@
                                 </span>
 
                                 <span ng-switch-when="INT" ng-switch="params.typeCST">
-                                    <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[params.id]">
-                                     <input ng-switch-when="NUMBER" type="number" min="0" step="1" ng-model="newCallValues[params.id]">
-                                     <input ng-switch-when="NONE" type="number" min="0" step="1" ng-model="newCallValues[params.id]">
+                                    <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-value="{{newCallValues[param.id]}}" ng-model="newCallValues[params.id]">
+                                     <input ng-switch-when="NUMBER" type="number" min="0" step="1" ng-value="{{newCallValues[param.id]}}" ng-model="newCallValues[params.id]">
+                                     <input ng-switch-when="NONE" type="number" min="0" step="1" ng-value="{{newCallValues[param.id]}}" ng-model="newCallValues[params.id]">
                                 </span>
                                 <span ng-switch-when="LONG" ng-switch="params.typeCST">
                                     <input ng-switch-when="POSITIVE_NUMBER" type="number" min="0" step="1" ng-model="newCallValues[params.id]">
