--- a/generator/asset/element/zone/publicRightZone_choralies/style.less
+++ b/generator/asset/element/zone/publicRightZone_choralies/style.less
@@ -42,6 +42,13 @@
     }
    }
 
+#${zoneName} {
+  top: 20%;
+  position: absolute;
+  width: 100%;
+  overflow: hidden;
+}
+
 #${zoneName} .title{
 	display:none;
 }
