--- a/generator/asset/element/zone/mobileMainZone_choralies/style.less
+++ b/generator/asset/element/zone/mobileMainZone_choralies/style.less
@@ -30,6 +30,12 @@
     }
    }
      
+#${zoneName} {
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  overflow: hidden;
+}
 
 #${zoneName} .title{
 	display:none;
