--- a/generator/asset/element/renderer/choralies_render_Weather_Forecast_for_header.js/less/choralies_render_Weather_Forecast_for_header.less
+++ b/generator/asset/element/renderer/choralies_render_Weather_Forecast_for_header.js/less/choralies_render_Weather_Forecast_for_header.less
@@ -53,8 +53,20 @@
 				font-size:90%;
 			}
 		}
+		margin-right:10px;
 	}
-	
+	.logo_meteo{
+		
+		background:transparent url('../img/logos/meteo.png') no-repeat center center;
+		.lightBackground;
+		/*width:10%;*/
+   		 -moz-background-size:90%; /* Old Firefox */
+		background-size:90%;	
+		float:left;
+		height:90%;
+		/*margin-left:2%;	*/
+
+	}	
 }
 @media (max-width: 768px) 	{
 	#Weather_current_header{
