--- a/generator/asset/element/layout/choralies_theatre/less/style.less
+++ b/generator/asset/element/layout/choralies_theatre/less/style.less
@@ -4,7 +4,7 @@
 body
 {
     .radial-gradient;
-    background-image:  url('../img/background_choralies.png'), url('../img/yourcast_background.png');
+    background-image:  url('../img/background_choralies.png'), url('../img/yourcast_background.jpg');
     background-position: 2% top, left top;
 	background-repeat:no-repeat, repeat;
 	/*background-attachment:fixed fixed;*/
@@ -31,7 +31,7 @@ body
 body
 {
     background-color:@black;
-    background-image:  url('../img/background_choralies.png'), url('../img/yourcast_background.png');
+    background-image:  url('../img/background_choralies.png'), url('../img/yourcast_background_mobile.jpg');
     background-position: 2% top, left top;
 	background-repeat:no-repeat, no-repeat;
 	/*background-attachment:fixed fixed;*/
@@ -44,7 +44,8 @@ body
 	position: absolute; 
 	top: 0; 
 	left: 0;    
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y:visible;
     margin:0;
 }
 }
