--- a/generator/asset/element/zone/mobileMainZone_choralies/style.less
+++ b/generator/asset/element/zone/mobileMainZone_choralies/style.less
@@ -12,7 +12,7 @@
 	-moz-box-sizing: border-box;   
 	box-sizing: border-box;    
     margin-top: 0%;
-    overflow: hidden;
+    overflow: visible;
     position: relative;
     margin-left:1%;
 	font-size:120%;
