--- a/generator/asset/maven/personalizer/src/main/webapp/views/zoneClient.html
+++ b/generator/asset/maven/personalizer/src/main/webapp/views/zoneClient.html
@@ -17,14 +17,20 @@
                     <th> Source </th>
                     <th> Temps </th>
                     <th> Order </th>
+                    <th></th>
                 </tr>
                 <tr ng-repeat="call in calls">
-                    <td>{{getCallNumber(call)}}</td>
+                    <td>{{mapOrder[call.callID]}}</td>
                     <td>{{call.callID}}</td>
                     <td>{{call.service.name}}</td>
-                    <td> <a ng-click="showTimeOutEdition(call.callID)"></a></td>
+                    <td> <a ng-click="showTimeEdition(call.callID)">{{mapTime[call.callID]}}</a></td>
                     <td><button class="btn btn-small" ng-click="sortDown(call.callID)"> <i class="icon-arrow-down"></i></button> <button class="btn btn-small" ng-click="sortUp(call.callID)"> <i class="icon-arrow-up"></i></button></td>
-                    <span ng-show="showTimeOut[call.callID]"><input type="number" min="0" step="1"></span>
+                    <td>
+                        <span ng-show="showTime[call.callID]">
+                            <input ng-model="mapTime[call.callID]" type="number" min="0" step="1">
+                            </span><button ng-show="showTime[call.callID]" class="btn btn-small" ng-click="setTime(call.callID)">Valider </button>
+                        
+                   </td>
             </tr></table>
             
         </div>
