Some changes in personalizer

--- a/generator/asset/maven/personalizer/src/main/webapp/views/tabs.html
+++ b/generator/asset/maven/personalizer/src/main/webapp/views/tabs.html
@@ -6,4 +6,7 @@
            <!-- <li ng-show="showClient" ng-class="isActive(client)"><a href="#/client" ng-click="activate(client)"> Client </a></li> -->
         </ul>
     </div>
+    <div style="text-align: right">
+        <button class="btn btn-inverse" ng-click="logout()"> <i class="icon-signout icon-white"></i> Se déconnecter </button>
+    </div>
 </div>
