Some changes in personalizer and missing assets.

--- a/generator/asset/maven/personalizer/src/main/webapp/views/start.html
+++ b/generator/asset/maven/personalizer/src/main/webapp/views/start.html
@@ -13,7 +13,7 @@
 
             <p>
                 <label class="control-label">Mot de passe : </label>
-                <input name="password" type="text" placeholder="Saisissez votre mot de passe" ng-model="password" required="">
+                <input name="password" type="password" placeholder="Saisissez votre mot de passe" ng-model="password" required="">
                 <!-- <span class="error" ng-show="auth.password.$error.required"> Requis !</span> -->
             </p>
         </form>
