--- a/generator/asset/template/controler.js.vm
+++ b/generator/asset/template/controler.js.vm
@@ -21,6 +21,7 @@ init_$zoneName = function() {
 	var url = '/$providerPath/rest/';
 	var anim_func = new $behaviorFunction();
 	var request_timeout = $requestTimeout;
+	//var url_client_personalizer = $personalizerName/client;
 	try {
 		var z1 = new Zone(id, map, map_time, url, anim_func, request_timeout);
 		z1.request();
