--- a/generator/asset/template/controler.js.vm
+++ b/generator/asset/template/controler.js.vm
@@ -25,7 +25,7 @@ init_$zoneName = function() {
 	try {
 		var z1 = new Zone(id, map, map_time, url, anim_func, request_timeout, url_client_personalizer);
 		z1.request();
-		ControlerGeneral.getInstance.push(z1);
+		ControlerGeneral.getInstance().push(z1);
 		return z1;
 	} catch(exception) {}
 };
