--- a/generator/asset/maven/personalizer/src/main/webapp/views/client.html
+++ b/generator/asset/maven/personalizer/src/main/webapp/views/client.html
@@ -2,11 +2,42 @@
     <tabs></tabs>
 </div>
 <div>
-    <div style="background-color: #F2F2F2">
+    <!--<div style="background-color: #F2F2F2;">
 
         <p><h3 style="text-align: center"> Les requêtes disponibles </h3></p>
         <ul ng-repeat="element in zones">
             <li><h3><a href="#/client/{{element.service}}/{{element.zone}}"><span tooltip-animation="true" tooltip="Source : {{element.service}}, Zone :{{element.zone}}" tooltip-placement="right">{{element.service}} : {{element.zone}}</span></a></h3></li>
         </ul>
+    </div> -->
+    <div>
+        <div ng-repeat="zone in zones" style="border-radius: 6px; padding: 10px; background-color: #F2F2F2; border-style: solid; border-color: dodgerblue">
+            <table class="table table-bordered">
+                <caption> <h3 style="text-align: center">Personalisation de  '{{zone}}'</h3>
+                </caption>
+                <tr>
+                    <th> # </th>
+                    <th> CAll ID </th>
+                    <th> Source </th>
+                    <th> Temps </th>
+                    <th> Order </th>
+                    <th></th>
+                </tr>
+                <tr ng-repeat="(callID, order) in mapOrder[zone]">
+                    <td>{{order}}</td>
+                    <td>{{callID}}</td>
+                    <td>{{source}}</td>
+                    <td> <a ng-click="showTimeEdition(callID)">{{mapTime[zone][callID]}}</a></td>
+                    <td><button class="btn btn-small" ng-click="sortDown(zone, callID)"> <i class="icon-arrow-down"></i></button> <button class="btn btn-small" ng-click="sortUp(zone, callID)"> <i class="icon-arrow-up"></i></button></td>
+                    <td>
+                        <span ng-show="showTime[callID]">
+                            <input ng-model="mapTime[zone][callID]" type="number" min="0" step="1">
+                            </span><button ng-show="showTime[callID]" class="btn btn-small" ng-click="setTime(zone, callID)">Valider </button>
+                        
+                    </td>
+                </tr>
+            </table>
+            
+        </div>
+
     </div>
 </div>
