--- a/generator/asset/element/layout/choralies_public/less/functions.less
+++ b/generator/asset/element/layout/choralies_public/less/functions.less
@@ -120,6 +120,10 @@
 .whiteAlpha{
 	background-color: rgba(255, 255, 255, 0.70);
 }
+.lightBackground15{
+	background-color: rgba(255, 255, 255, 0.15);
+	color:@grayDarker;
+}
 .greenAlpha{
 	background-color: rgba(204, 228, 40, 0.75);
 }
