--- a/generator/asset/element/renderer/choralies_render_Affiches_for_left_zone.js/less/choralies_render_Affiches_for_left_zone.less
+++ b/generator/asset/element/renderer/choralies_render_Affiches_for_left_zone.js/less/choralies_render_Affiches_for_left_zone.less
@@ -27,10 +27,10 @@
 
 		.affiche_Dates{
 
-			font-weight:600;
+			font-weight:500;
 			padding:1%;
 			margin-bottom:2%;
-			color:@blueDark;
+			color:@white;
 			font-size:120%;
 			.pinkAlpha;
 
@@ -44,8 +44,8 @@
 		}
 		.affiche_Price{
 			float:right;
-			background-color:@black;
-			color:@white;
+			background-color:@blue;
+			color:@black;
 			margin:5px 0 5px 5px;
 			padding:1%;			
 		}
