--- a/generator/asset/element/renderer/choralies_render_Affiches_for_main_public_zone.js/less/choralies_render_Affiches_for_main_public_zone.less
+++ b/generator/asset/element/renderer/choralies_render_Affiches_for_main_public_zone.js/less/choralies_render_Affiches_for_main_public_zone.less
@@ -12,7 +12,7 @@
 		margin:2%;
 		img {
 			float:left;
-			max-width:50%;
+			width:40%;
 			margin-bottom:2%;
 			margin-right:2%;
 		}
@@ -32,14 +32,14 @@
 			font-weight:bold;
 			font-size:120%;
 			padding-bottom:0.5em;
-			border-bottom:1px solid @black;
+			border-bottom:0px solid @black;
 		}
 		.affiche_Price{
 			float:right;
-			background-color:@black;
+			.pinkAlpha;
 			color:@white;
 			margin:5px 0 5px 5px;
-			padding:1%;			
+			padding:1%;
 		}
 		.affiche_Subtitle{
 			font-weight:500;
@@ -52,11 +52,11 @@
 
 			font-weight:400;
 			.location_small;
-			display:block;
+			display:inline-block;
 			margin-bottom:0.8em;
-			margin-top:0.3em;
-			padding-bottom:0.2em;
-			border-bottom:1px solid @black;
+			margin-top:0.6em;
+			padding-bottom:0.8em;
+			border-bottom:0px solid @black;
 
 		}
 
