--- a/generator/asset/element/renderer/choralies_render_RSS_for_header.js/less/choralies_render_RSS_for_header.less
+++ b/generator/asset/element/renderer/choralies_render_RSS_for_header.js/less/choralies_render_RSS_for_header.less
@@ -12,8 +12,8 @@
 	float:right;
 	
 	.rss_body{
-		.lightBackground;
-		color:@orange;
+		.lightBackground15;
+		color:@white;
 		padding:0% 2% 2% 2%;
 		font-size:33%;
 		-webkit-box-sizing: border-box; 
