--- a/generator/asset/element/renderer/choralies_render_Twitter_for_scrolling.js/less/choralies_render_Twitter_for_scrolling.less
+++ b/generator/asset/element/renderer/choralies_render_Twitter_for_scrolling.js/less/choralies_render_Twitter_for_scrolling.less
@@ -1,7 +1,7 @@
 @import "style";
 
 
-.scrollContentEachLogoLeft{
+ .scrollContentEachLogoLeft{
     margin-left:10px;
     margin-right:10px;
     height:90%;
@@ -35,15 +35,16 @@
 		
 		.twitter_title{
 			background-color:transparent;
-			color:@white;
+			color:@green;
 			padding-top:0em;
-			i { color:@white;}
+			i { color:@green;}
 			img {
 		  		float:none;
 		  		border-radius : 3px;
 		  		height:80%;
 		  		margin-top:8px;
 		  	}
+		  	font-weight:bold;
 		}
 		.twitter_Content{
 			margin-left:0em;
@@ -59,11 +60,11 @@
 		}		
 	}
 	
+	
 	.info{
 		color:@grayLightPlus;
-		font-style:italic;		
+		font-style:italic;
 	}		
-		
 }
 
 	/* Twitter */
@@ -85,9 +86,10 @@
 		
 		.twitter_title{
 			background-color:transparent;
-			color:@white;
+			color:@green;
 			padding-top:0em;
-			i { color:@white;}
+			font-weight:bold;
+			i { color:@green;}
 			img {
 		  		float:none;
 		  		border-radius : 3px;
@@ -109,7 +111,8 @@
 		}		
 	}
 	
+	
 	.info{
 		color:@grayLightPlus;
-		font-style:italic;		
+		font-style:italic;
 	}	
