--- a/generator/asset/element/layout/choralies_attente/less/functions.less
+++ b/generator/asset/element/layout/choralies_attente/less/functions.less
@@ -134,6 +134,10 @@
 	background-color: rgba(255, 255, 255, 0.25);
 	color:@grayDarker;
 }
+.lightBackground15{
+	background-color: rgba(255, 255, 255, 0.15);
+	color:@grayDarker;
+}
 
 .leftArrow{
 	background: transparent url('../img/left_arrow.png') no-repeat left center;
